--- a/demo/index.html
+++ b/demo/index.html
@@ -11,13 +11,13 @@
             padding: 0;
         }
     </style>
-    <link rel="stylesheet" href="lib/jigsaw.css">
+    <link rel="stylesheet" href="./jigsaw.css">
 </head>
 <body>
     
     <div id="demo"></div>
         
-    <script src="lib/jigsaw.js"></script>
+    <script src="../dist/jigsaw.umd.js"></script>
     <script>
         var root = document.getElementById('demo');
         jigsaw(root, window.innerWidth, window.innerHeight);
